pop over component prac

--- a/Frontend/src/app/home/home.component.html
+++ b/Frontend/src/app/home/home.component.html
@@ -24,6 +24,7 @@
             </button>
             <button nz-button nzSize="large">Learn More</button>
           </div>
+          <nz-demo-popover-control></nz-demo-popover-control>
         </div>
       </nz-card>
 
