--- a/Frontend/src/app/home/home.component.html
+++ b/Frontend/src/app/home/home.component.html
@@ -27,7 +27,7 @@
           <nz-demo-popover-control></nz-demo-popover-control>
         </div>
       </nz-card>
-
+      <a nz-button nzSize="large" routerLink="/my-page">Go to My Page</a>
       <div class="features">
         <nz-divider nzText="Features"></nz-divider>
         <div nz-row [nzGutter]="16">
