--- a/Frontend/src/app/about/about.component.html
+++ b/Frontend/src/app/about/about.component.html
@@ -1,1 +1,11 @@
-<p>about works!</p>
+<nz-layout class="layout">
+  <nz-content class="content">
+    <div class="inner-content">
+      <nz-card nzHoverable class="about-card">
+        <h1>About Page</h1>
+        <p>This is the about page content.</p>
+        <button nz-button nzType="primary" routerLink="/">Back to Home</button>
+      </nz-card>
+    </div>
+  </nz-content>
+</nz-layout>
