--- a/Frontend/src/app/home/home.component.html
+++ b/Frontend/src/app/home/home.component.html
@@ -1,22 +1,12 @@
 <nz-layout class="layout">
-  <nz-header>
-    <div class="logo">
-      <p>NG-ZORRO Homepage</p>
-    </div>
-    <ul nz-menu nzTheme="dark" nzMode="horizontal" class="menu">
-      <li nz-menu-item nzSelected routerLink="/">Home</li>
-      <li nz-menu-item>Documentation</li>
-      <li nz-menu-item>Components</li>
-      <li nz-menu-item routerLink="/my-page">About</li>
-    </ul>
-  </nz-header>
   <nz-content class="content">
     <div class="inner-content">
       <nz-card nzHoverable class="welcome-card">
         <div class="welcome-content">
-          <h1>Welcome to NG-ZORRO</h1>
+          <h1>Welcome to Hoshizora</h1>
           <p>
-            An enterprise-class Angular UI component library based on Ant Design
+            Travel Agency for Your Exclusive and Seamless Travel Experiences
+            Beyond Earth
           </p>
           <div class="buttons">
             <button nz-button nzType="primary" nzSize="large">
@@ -27,23 +17,33 @@
         </div>
       </nz-card>
 
+      <div style="display: flex; width: 100%; height: 101vh">
+        <div style="width: 50%; padding: 0; overflow: hidden">
+          <nz-demo-carousel-autoplay
+            style="width: 100%; height: 100%"
+          ></nz-demo-carousel-autoplay>
+        </div>
+
+        <div style="width: 50%; padding: 16px; overflow-y: auto; height: 100%">
+          <div class="features">
+            <nz-divider nzText="Features"></nz-divider>
+            <div nz-row [nzGutter]="16">
+              <div nz-col [nzSpan]="8" *ngFor="let feature of features">
+                <nz-card [nzTitle]="feature.title" [nzHoverable]="true" style="margin-bottom: 10px;">
+                  <p>{{ feature.description }}</p>
+                </nz-card>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <div class="go-to-page">
         <button nz-button nzType="primary" nzSize="large" routerLink="/my-page">
           Go to My Page
         </button>
       </div>
-
-      <div class="features">
-        <nz-divider nzText="Features"></nz-divider>
-        <div nz-row [nzGutter]="16">
-          <div nz-col [nzSpan]="8" *ngFor="let feature of features">
-            <nz-card [nzTitle]="feature.title" [nzHoverable]="true">
-              <p>{{ feature.description }}</p>
-            </nz-card>
-          </div>
-        </div>
-      </div>
+      <nz-footer class="footer"> Hoshizora ©2025</nz-footer>
     </div>
   </nz-content>
-  <nz-footer class="footer"> NG-ZORRO ©2023 Implemented in Angular </nz-footer>
 </nz-layout>
