--- a/Frontend/src/app/home/home.component.html
+++ b/Frontend/src/app/home/home.component.html
@@ -46,6 +46,35 @@
         <nz-splitter-complex></nz-splitter-complex>
       </div>
 
+      <div style="display: flex; width: 100%; height: 101vh">
+        <div
+          style="
+            width: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+          "
+        >
+          <nz-login-form></nz-login-form>
+        </div>
+
+        <div
+          style="
+            width: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+          "
+        >
+          <nz-card nzTitle="Welcome Back" nzHoverable style="width: 80%">
+            <p>
+              Log in to access exclusive travel features and explore beyond
+              Earth.
+            </p>
+          </nz-card>
+        </div>
+      </div>
+
       <div class="go-to-page">
         <button nz-button nzType="primary" nzSize="large" routerLink="/my-page">
           Go to My Page
